--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,9 @@
 # Set true color
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+# Enable mouse
+set -g mouse on
+
 # Set prefix
 unbind C-b
 set -g prefix C-Space
@@ -10,8 +13,17 @@ bind C-Space send-prefix
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Set vi-mode
+set-window-option -g mode-keys vi
+
+# Keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin '2KAbhishek/tmux2k'
 
