new tmux options

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,13 +1,28 @@
+# Set prefix
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin '2KAbhishek/tmux2k'
+
+# Tmux Theme
+set -g @tmux2k-theme 'catppuccin'
+
 # Set true color
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Enable mouse
 set -g mouse on
 
-# Set prefix
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# Increase history limit
+set -g history-limit 30000
+
+# Zero out escape time delay for quicker response
+set -s escape-time 0
 
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
@@ -16,21 +31,16 @@ bind -n M-L next-window
 # Set vi-mode
 set-window-option -g mode-keys vi
 
-# Keybindings
+# Source file
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "~/.config/tmux/tmux.conf reloaded"
+
+# Selecting text + yanking
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Opens panes in current directory
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin '2KAbhishek/tmux2k'
-
-set -g @tmux2k-theme 'catppuccin'
+bind v split-window -v -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
 
 run '~/.tmux/plugins/tpm/tpm'
