--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,13 +3,18 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+set -g @plugin '2KAbhishek/tmux2k'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin '2KAbhishek/tmux2k'
 
-# Tmux Theme
+# Tmux ressurect on start
+set -g @continuum-restore 'on'
+
+# Tmux theme
 set -g @tmux2k-theme 'catppuccin'
 
 # Set true color
