setting option to work as alt in mac

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,8 @@ map ctrl+v paste_from_clipboard
 font_family Fira Code
 font_size 12.0
 
+macos_option_as_alt yes
+
 # Fix nerd font symbols
 include nerd-font-symbols.conf
 
