--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,8 +36,7 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = nm-applet &
-exec-once = waybar
+exec-once = waybar & swaync & Google-chrome & ghostty & vesktop
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -233,6 +232,12 @@ bind = $mainMod, J, movefocus, d
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, L, movefocus, r
 
+# Screenshot region to clipboard
+bind = $mainMod SHIFT, 4, exec, hyprshot -m region --clipboard-only
+
+# Lockscreen
+bind = $mainMod CONTROL, Q, exec, hyprlock
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -245,17 +250,17 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+# Move active window to a workspace with mainMod + CONTROL + [0-9]
+bind = $mainMod CONTROL, 1, movetoworkspace, 1
+bind = $mainMod CONTROL, 2, movetoworkspace, 2
+bind = $mainMod CONTROL, 3, movetoworkspace, 3
+bind = $mainMod CONTROL, 4, movetoworkspace, 4
+bind = $mainMod CONTROL, 5, movetoworkspace, 5
+bind = $mainMod CONTROL, 6, movetoworkspace, 6
+bind = $mainMod CONTROL, 7, movetoworkspace, 7
+bind = $mainMod CONTROL, 8, movetoworkspace, 8
+bind = $mainMod CONTROL, 9, movetoworkspace, 9
+bind = $mainMod CONTROL, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
