--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -74,7 +74,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -184,7 +184,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = caps:swapescape
     kb_rules =
 
     follow_mouse = 1
