better gaps and fixing source in zshrc

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,11 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar & swaync & Google-chrome & ghostty & vesktop
+# exec-once = waybar
+exec-once = swaync
+exec-once = [workspace 1 silent] Google-chrome
+exec-once = [workspace 2 silent] ghostty
+exec-once = [workspace 5 silent] vesktop
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -73,8 +77,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 4
+    gaps_out = 5
 
     border_size = 2
 
@@ -152,6 +156,13 @@ animations {
 # uncomment all if you wish to use that.
 # workspace = w[tv1], gapsout:0, gapsin:0
 # workspace = f[1], gapsout:0, gapsin:0
+workspace = 1,monitor:DP-2
+workspace = 2,monitor:DP-2
+workspace = 3,monitor:DP-2
+workspace = 4,monitor:DP-3,rounding=true,decorate=true,gapsin:1,gapsout:2
+workspace = 5,monitor:DP-3,rounding=true,decorate=true,gapsin:1,gapsout:2
+
+
 # windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
@@ -182,7 +193,7 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant =
+    kb_variant = intl
     kb_model =
     kb_options = caps:swapescape
     kb_rules =
