adding six workspaces to waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,11 +36,11 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = waybar
+exec-once = waybar
 exec-once = swaync
-exec-once = [workspace 1 silent] Google-chrome
+exec-once = [workspace 1 silent] google-chrome-stable
 exec-once = [workspace 2 silent] ghostty
-exec-once = [workspace 5 silent] vesktop
+exec-once = [workspace 5 silent] flatpak run vesktop
 
 #############################
 ### ENVIRONMENT VARIABLES ###
