adding date to waybar, adding workspace 6 to right monitor, fixing lsp config, adding env vars to zshrc and adding gemini system prompt and settings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -161,6 +161,7 @@ workspace = 2,monitor:DP-2
 workspace = 3,monitor:DP-2
 workspace = 4,monitor:DP-3,rounding=true,decorate=true,gapsin:1,gapsout:2
 workspace = 5,monitor:DP-3,rounding=true,decorate=true,gapsin:1,gapsout:2
+workspace = 6,monitor:DP-3,rounding=true,decorate=true,gapsin:1,gapsout:2
 
 
 # windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
@@ -195,7 +196,6 @@ input {
     kb_layout = us
     kb_variant = intl
     kb_model =
-    kb_options = caps:swapescape
     kb_rules =
 
     follow_mouse = 1
@@ -225,7 +225,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT # Sets "Windows" key as main modifier
+$mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
@@ -237,6 +237,8 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, B, togglesplit, # dwindle
 
+bind = $mainMod SHIFT, W, exec, killall waybar && waybar &
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, J, movefocus, d
@@ -244,7 +246,8 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, L, movefocus, r
 
 # Screenshot region to clipboard
-bind = $mainMod SHIFT, 4, exec, hyprshot -m region --clipboard-only
+bind = $mainMod, C, exec, hyprshot -m region --clipboard-only
+bind = $mainMod SHIFT, C, exec, hyprshot -m region
 
 # Lockscreen
 bind = $mainMod CONTROL, Q, exec, hyprlock
@@ -273,7 +276,6 @@ bind = $mainMod CONTROL, 8, movetoworkspace, 8
 bind = $mainMod CONTROL, 9, movetoworkspace, 9
 bind = $mainMod CONTROL, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
